[tool.poetry]
name = "pynabi"
version = "0.1.0"
description = ""
authors = ["HackTheOxidation <tomas.hagenau@protonmail.ch>"]
readme = "README.md"
packages = [{include = "pynabi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.1.1"
mypy = "^1.8.0"

[tool.poetry.scripts]
main = "pynabi:main"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
